refactor(build): unify Minecraft generation and test workflow